# ros_wifibot

./: CMakeLists.txt  package.xml
documentation/: doc_config
include/: i2c.h  module.h  motor.h  servo.h  sharp.h  wifibot.h
launch/: wifibot_local.launch
nodes/: dev_i2c.cpp  dev_motor.cpp  dev_servo.cpp  dev_sharp.cpp
scripts/: user_servo.cpp  user_sharp.cpp
src/: i2c.cpp  module.cpp  motor.cpp  servo.cpp  sharp.cpp  wifibot.cpp
